# computergraphics

./: CMakeLists.txt  README.md
res/shaders/: Basic.shader
src/: Application.cpp  IndexBuffer.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.cpp  VertexBufferLayout.h  main.cpp
